issue-9: Added Eclipse modular ant sample